sfdx-source/force-app/main/default/objects/ContentVersion/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15836: It stores the type of document being stored in Content Version.</description>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>