sfdx-source/force-app/main/default/objects/ContentVersion/fields/Mx_Country__c.field-meta.xml
<CustomField>
    <fullName>Mx_Country__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15838: It stores the Merchant&apos;s Country code.</description>
    <label>Mx Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>