sfdx-source/force-app/main/default/objects/ContentVersion/fields/Mx_Document_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Mx_Document_Verification_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15838: It indicates the document verification status. The default value is &quot;Pending Review&quot;.</description>
    <label>Mx Document Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>