sfdx-source/force-app/main/default/objects/ContentVersion/fields/Mx_Fraud_Document__c.field-meta.xml
<CustomField>
    <fullName>Mx_Fraud_Document__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15836 : It associates the content version to Merchant Fraud Document record.</description>
    <label>Mx Fraud Document</label>
    <referenceTo>Mx_Fraud_Document__c</referenceTo>
    <relationshipLabel>Content Versions</relationshipLabel>
    <relationshipName>Content_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>