sfdx-source/force-app/main/default/objects/ContentVersion/fields/Related_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15836: It stores Store Id of the document.</description>
    <label>Related To Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>