sfdx-source/force-app/main/default/objects/ContentVersion/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>LEM-15836: Stores type of the request Ex: Equipment, Fraud etc.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>